fix:change color from red to green

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <main>
       <table border="1" cellspacing="0" cellpadding="5" >
-        <tr> <td BGCOLOR="#c7050e">
+        <tr> <td BGCOLOR="#008000">
           
        <h1>INFORMATICIEN</h1>
         </td>
